Added context to the recipes files

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 </head>
 <body>
     <h1>Odin Project</h1>
-    <a href="./recipes/lasagna.html">Lasagna</a>
+    <ul>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/asparagus.html">Asparagus</a></li>
+        <li><a href="./recipes/gratin.html">Gratin</a></li>
+    </ul>
+    
     <img src="https://www.allrecipes.com/thmb/--D4QjJ8RwHQmk4fGOKe-f7OHEA=/282x188/filters:no_upscale():max_bytes(150000):strip_icc()/23600-worlds-best-lasagna-DDMFS-4x3-1196-24c5401652934ffb96d3d94bc9fbe2d7.jpg">
     <h2>World's Best Lasagna</h2>
     <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
